# lx-tauri-example-with-iroh

./: package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  node.rs  p2p_client.rs
